--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "mongoose": "^5.13.5",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
