--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "mongoose": "^5.13.5",
     "next": "11.0.1",
     "react": "17.0.2",
