--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "next": "11.0.1",
     "react": "17.0.2",
