--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "nanoid": "^3.1.23",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "nprogress": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
