--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "browser-image-compression": "^1.0.15",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -22,8 +23,10 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "nanoid": "^3.1.23",
     "next": "^11.1.0",
+    "next-connect": "^0.10.2",
     "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
