--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nanoid": "^3.1.23",
     "next": "^11.1.0",
     "next-connect": "^0.10.2",
+    "next-routes": "^1.4.2",
     "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
