--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.0",
     "tailwind": "^4.0.0",
     "ws": "^8.1.0"
   },
